# lua_binding_generator

./: .gitignore  CMakeLists.txt  README.md  README_EN.md  main.cpp  test_cleanup.sh
cmake/: LuaBindingRuntimeConfig.cmake.in  lua_binding_runtime.pc.in
docs/framework/: API_REFERENCE.md  QUICK_START.md
docs/tools/: BUILD_GUIDE.md  EXAMPLES.md  USAGE.md
examples/: CMakeLists.txt  complete_example.cpp  complete_example.h  comprehensive_main.cpp  comprehensive_test.cpp  comprehensive_test.h  game_engine.cpp  game_engine.h  game_engine_main.cpp  main.cpp  simple_example.cpp  simple_example.h  simple_main.cpp
examples/complete_test/: CMakeLists.txt  README.md
examples/complete_test/headers/: macro_coverage.h  runtime_features.h
examples/complete_test/lua_scripts/: bidirectional_test.lua  class_interaction_test.lua  macro_test.lua  main_test.lua
examples/complete_test/src/: binding_integration_example.cpp  macro_coverage.cpp  main.cpp  runtime_features.cpp
examples/complete_test/test_scripts/: basic_macro_test.lua  callback_container_test.lua  class_binding_test.lua  lua_test_report.txt  operator_overload_test.lua  run_all_tests.lua  runtime_integration_test.lua
examples/scripts/: README.md  README_TESTING.md  container_creation_examples.lua  run_all_tests.lua  run_tests_safe.lua  test_bindings_integration.lua  test_comprehensive.lua  test_container_factory.lua  test_framework_standalone.lua  test_game_engine.lua  test_simple.lua
include/: ast_visitor.h
include/framework/: advanced_allocators.h  export_macros.h  file_watcher.h  hot_reload.h  lua_binding_runtime.h  lua_runtime_manager.h  memory_allocator.h  platform_file_watcher.h  result.h  runtime_logger.h
include/tools/: ast_visitor.h  direct_binding_generator.h  logger.h
scripts/: README.md  build_and_test_all.bat  build_and_test_all.sh  clean_thirdparty.bat  clean_thirdparty.sh
src/: ast_visitor.cpp  direct_binding_generator.cpp  dynamic_compilation_database.cpp  logger.cpp
src/framework/: lua_runtime_manager.cpp  platform_file_watcher.cpp  runtime_logger.cpp
src/tools/: ast_visitor.cpp  compiler_detector.cpp  direct_binding_generator.cpp  incremental_generator.cpp  main.cpp  smart_inference_engine.cpp
